# ready-set-develop

./: .ansible-lint  .cirrus.yml  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .sops.yaml  .yamllint  LICENSE  README.md  ansible.cfg  bootstrap.sh  config.default.yml  config.enc.yml  config.sops.yml  config.work.sops.yml  config.yml  config.yml2  main.yml  pyproject.toml  renovate.json  requirements.txt  requirements.yml
.github/workflows/: ci.yml  ci.yml_  lint.yml
dotfiles/agents/: AGENTS.sops.md
dotfiles/gh/: config.yml
dotfiles/git/: config.j2
dotfiles/gnupg/: gpg-agent.conf
dotfiles/k9s/: config.yaml.j2
dotfiles/keepassxc/: keepassxc.ini
dotfiles/rsync/: exclude
dotfiles/smb/: .env
dotfiles/vscode/: settings.json
dotfiles/zsh/: .zprofile  .zshenv  .zshenv.j2  .zshrc  aliases.zsh  aliases.zsh.j2  p10k.zsh
files/rectangle/: com.knollsoft.Rectangle.plist
roles/dock/defaults/: main.yml
roles/dock/tasks/: dock-add.yml  dock-move.yml  main.yml
roles/dotfiles/defaults/: main.yml
roles/dotfiles/tasks/: install.yml  links.yml  links_folder.yml  main.yml
roles/git/defaults/: main.yml
roles/git/tasks/: main.yml
roles/ide/defaults/: main.yml
roles/ide/tasks/: fonts.yml  iterm.yml  main.yml  terminal.yml  vscode.yml
roles/java/defaults/: main.yml
roles/java/tasks/: install_temurin.yml  main.yml  temurin.yml
roles/macos/defaults/: main.yml
roles/macos/tasks/: main.yml  osx_defaults.yml
tasks/: git.yml  git_clone.yml  osx.yml  shell.yml  terminal.yml  vscode.yml
test/: config.yml  setup.sh
vars/: ssh_config.enc.yml
(+11 files in other folders)
